OPIK-396 pr comments